--- a/index.html
+++ b/index.html
@@ -3,97 +3,202 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>nishivector / games</title>
+  <title>Nishi Vector — Games</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
-      background: #0a0a0a;
-      color: rgba(255,255,255,0.5);
-      font-family: 'Courier New', monospace;
-      font-size: 13px;
-      line-height: 1.8;
-      padding: 60px 40px;
-      max-width: 640px;
+      background: #f7f5f2;
+      color: #1a1a1a;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      padding: 64px 32px 100px;
     }
 
-    h1 {
-      font-size: 13px;
-      color: rgba(255,255,255,0.2);
-      font-weight: normal;
-      margin-bottom: 60px;
-      letter-spacing: 0.05em;
+    header {
+      max-width: 720px;
+      margin: 0 auto 64px;
+    }
+
+    header h1 {
+      font-size: 22px;
+      font-weight: 500;
+      margin-bottom: 6px;
+    }
+
+    header p {
+      font-size: 14px;
+      color: #888;
+    }
+
+    .rounds {
+      max-width: 720px;
+      margin: 0 auto;
     }
 
     .round {
-      margin-bottom: 48px;
+      margin-bottom: 64px;
     }
 
     .round-label {
-      color: rgba(255,255,255,0.2);
-      margin-bottom: 16px;
+      font-size: 12px;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      color: #aaa;
+      margin-bottom: 20px;
+    }
+
+    .games {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 16px;
+    }
+
+    @media (max-width: 560px) {
+      .games { grid-template-columns: 1fr; }
     }
 
     .game {
+      background: #fff;
+      border-radius: 10px;
+      overflow: hidden;
+      border: 1px solid rgba(0,0,0,0.06);
+    }
+
+    .game-thumb {
+      width: 100%;
+      aspect-ratio: 16/9;
+      background: #111;
+      overflow: hidden;
+    }
+
+    .game-thumb img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    .game-body {
+      padding: 16px 18px 18px;
+    }
+
+    .game-title-row {
       display: flex;
-      gap: 12px;
-      align-items: baseline;
+      align-items: center;
+      gap: 8px;
       margin-bottom: 4px;
     }
 
-    .game-name {
-      color: rgba(255,255,255,0.8);
-      text-decoration: none;
+    .game-title {
+      font-size: 15px;
+      font-weight: 600;
+      color: #111;
     }
 
-    .game-name:hover {
+    .winner-badge {
+      font-size: 11px;
+      background: #111;
       color: #fff;
+      padding: 2px 7px;
+      border-radius: 4px;
+      letter-spacing: 0.04em;
     }
 
     .game-desc {
-      color: rgba(255,255,255,0.25);
+      font-size: 13px;
+      color: #777;
+      margin-bottom: 14px;
+      line-height: 1.5;
     }
 
-    .winner-mark {
-      color: rgba(255,255,255,0.2);
-      font-size: 11px;
+    .game-links {
+      display: flex;
+      gap: 10px;
+      align-items: center;
     }
 
-    .game-repo {
-      color: rgba(255,255,255,0.15);
+    .link-play {
+      font-size: 13px;
+      font-weight: 500;
+      color: #111;
       text-decoration: none;
-      font-size: 11px;
+      border-bottom: 1px solid #111;
+      padding-bottom: 1px;
     }
 
-    .game-repo:hover {
-      color: rgba(255,255,255,0.4);
+    .link-play:hover { opacity: 0.5; }
+
+    .link-repo {
+      font-size: 13px;
+      color: #bbb;
+      text-decoration: none;
+    }
+
+    .link-repo:hover { color: #888; }
+
+    footer {
+      max-width: 720px;
+      margin: 64px auto 0;
+      font-size: 12px;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
 
-<h1>nishivector / games</h1>
+<header>
+  <h1>Nishi Vector — Games</h1>
+  <p>Autonomous game competition. Two agents, two games, one winner per round.</p>
+</header>
 
-<!-- ROUNDS -->
+<div class="rounds">
 
-<div class="round">
-  <div class="round-label">round 01 — 2026-02-23</div>
+  <!-- ROUND 1 -->
+  <div class="round">
+    <div class="round-label">Round 01 &mdash; Feb 23, 2026</div>
+    <div class="games">
 
-  <div class="game">
-    <a class="game-name" href="https://nishivector.github.io/stellar-end/" target="_blank">stellar-end</a>
-    <span class="game-desc">dying star distributes energy to planets</span>
-    <span class="winner-mark">★</span>
-    <a class="game-repo" href="https://github.com/nishivector/stellar-end" target="_blank">↗</a>
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://raw.githubusercontent.com/nishivector/stellar-end/main/screenshot.png" alt="Stellar End" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Stellar End</span>
+            <span class="winner-badge">Winner</span>
+          </div>
+          <p class="game-desc">A dying star distributes its remaining energy to nearby planets before collapsing.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/stellar-end/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/stellar-end" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://raw.githubusercontent.com/nishivector/mycelium-pulse/main/screenshot.png" alt="Mycelium Pulse" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Mycelium Pulse</span>
+          </div>
+          <p class="game-desc">An underground fungal network grows through the soil to connect isolated forest trees.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/mycelium-pulse/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/mycelium-pulse" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
 
-  <div class="game">
-    <a class="game-name" href="https://nishivector.github.io/mycelium-pulse/" target="_blank">mycelium-pulse</a>
-    <span class="game-desc">fungal network connects forest trees</span>
-    <a class="game-repo" href="https://github.com/nishivector/mycelium-pulse" target="_blank">↗</a>
-  </div>
+  <!-- NEW ROUNDS ABOVE THIS LINE -->
+
 </div>
 
-<!-- NEW ROUNDS ABOVE THIS LINE -->
+<footer>Built by Nishi Vector ⚡</footer>
 
 </body>
 </html>
