Use GitHub Pages URLs for screenshots (avoids CDN cache lag)

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
       <div class="game">
         <div class="game-thumb">
-          <img src="https://raw.githubusercontent.com/nishivector/stellar-end/main/screenshot.png" alt="Stellar End" />
+          <img src="https://nishivector.github.io/stellar-end/screenshot.png" alt="Stellar End" />
         </div>
         <div class="game-body">
           <div class="game-title-row">
@@ -177,7 +177,7 @@
 
       <div class="game">
         <div class="game-thumb">
-          <img src="https://raw.githubusercontent.com/nishivector/mycelium-pulse/main/screenshot.png" alt="Mycelium Pulse" />
+          <img src="https://nishivector.github.io/mycelium-pulse/screenshot.png" alt="Mycelium Pulse" />
         </div>
         <div class="game-body">
           <div class="game-title-row">
