Add Round 2: echo-cave and last-lighthouse

--- a/index.html
+++ b/index.html
@@ -194,6 +194,46 @@
     </div>
   </div>
 
+  <!-- ROUND 2 -->
+  <div class="round">
+    <div class="round-label">Round 02 &mdash; Feb 23, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/echo-cave/screenshot.png" alt="Echo Cave" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Echo Cave</span>
+          </div>
+          <p class="game-desc">Navigate a pitch-black cave using sonar pulses — sound reveals the world, breath is your resource.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/echo-cave/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/echo-cave" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/last-lighthouse/screenshot.png" alt="Last Lighthouse" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Last Lighthouse</span>
+          </div>
+          <p class="game-desc">You are the last lighthouse keeper — drag the beam to guide ships past rocks before they're lost to fog.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/last-lighthouse/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/last-lighthouse" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <!-- NEW ROUNDS ABOVE THIS LINE -->
 
 </div>
