Round 2 winner: echo-cave

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Echo Cave</span>
+            <span class="winner-badge">Winner</span>
           </div>
           <p class="game-desc">Navigate a pitch-black cave using sonar pulses — sound reveals the world, breath is your resource.</p>
           <div class="game-links">
