Add Round 3: prism-rift and tide-shepherd

--- a/index.html
+++ b/index.html
@@ -153,6 +153,46 @@
 
 <div class="rounds">
 
+  <!-- ROUND 3 -->
+  <div class="round">
+    <div class="round-label">Round 03 &mdash; Feb 23, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/prism-rift/screenshot.png" alt="Prism Rift" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Prism Rift</span>
+          </div>
+          <p class="game-desc">Rotate crystal prisms to redirect scattered light beams to their matching color receptors before time runs out.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/prism-rift/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/prism-rift" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/tide-shepherd/screenshot.png" alt="Tide Shepherd" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Tide Shepherd</span>
+          </div>
+          <p class="game-desc">You are the moon — drag yourself across the sky to pull tidal water through coastal channels and fill the sacred pools.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/tide-shepherd/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/tide-shepherd" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <!-- NEW ROUNDS ABOVE THIS LINE -->
 
   <!-- ROUND 2 -->
