Round 3 winner: tide-shepherd

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Tide Shepherd</span>
+            <span class="winner-badge">Winner</span>
           </div>
           <p class="game-desc">You are the moon — drag yourself across the sky to pull tidal water through coastal channels and fill the sacred pools.</p>
           <div class="game-links">
