Add Round 4: ember-ascent and signal-ghost

--- a/index.html
+++ b/index.html
@@ -194,6 +194,46 @@
     </div>
   </div>
 
+  <!-- ROUND 4 -->
+  <div class="round">
+    <div class="round-label">Round 04 &mdash; Feb 23, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/ember-ascent/screenshot.png" alt="Ember Ascent" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Ember Ascent</span>
+          </div>
+          <p class="game-desc">You are a fire sprite ascending a burning ancient forest — leap between branches, catch embers, dodge the rain.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/ember-ascent/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/ember-ascent" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/signal-ghost/screenshot.png" alt="Signal Ghost" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Signal Ghost</span>
+          </div>
+          <p class="game-desc">A dying radio signal searching for home — tap relay towers to bounce your pulse across the city before your energy fades.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/signal-ghost/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/signal-ghost" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <!-- NEW ROUNDS ABOVE THIS LINE -->
 
   <!-- ROUND 2 -->
