Round 4 winner: ember-ascent

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Ember Ascent</span>
+            <span class="winner-badge">Winner</span>
           </div>
           <p class="game-desc">You are a fire sprite ascending a burning ancient forest — leap between branches, catch embers, dodge the rain.</p>
           <div class="game-links">
