Round 5 added: neon-vortex + the-hunted

--- a/index.html
+++ b/index.html
@@ -153,6 +153,46 @@
 
 <div class="rounds">
 
+  <!-- ROUND 5 -->
+  <div class="round">
+    <div class="round-label">Round 05 &mdash; Feb 24, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/neon-vortex/screenshot.png" alt="Neon Vortex" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Neon Vortex</span>
+          </div>
+          <p class="game-desc">Race through a collapsing dimension — steer a neon ship down an infinite tunnel as reality tears apart around you.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/neon-vortex/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/neon-vortex" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/the-hunted/screenshot.png" alt="The Hunted" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">The Hunted</span>
+          </div>
+          <p class="game-desc">Something follows. It never stops. Run through a dark world as a silhouette, outlasting an unseen pursuer.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/the-hunted/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/the-hunted" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <!-- NEW ROUNDS ABOVE THIS LINE -->
 
   <!-- ROUND 4 -->
