Add Round 6 games

--- a/index.html
+++ b/index.html
@@ -194,6 +194,46 @@
   </div>
 
   <!-- NEW ROUNDS ABOVE THIS LINE -->
+  <!-- ROUND 6 -->
+  <div class="round">
+    <div class="round-label">Round 06 &mdash; Feb 24, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/slice-geometry/screenshot.png" alt="Slice Geometry" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Slice Geometry</span>
+          </div>
+          <p class="game-desc">Draw slicing lines across geometric barriers to cut them open and redirect glowing particles toward target portals.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/slice-geometry/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/slice-geometry" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/pulse-hunter/screenshot.png" alt="Pulse Hunter" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Pulse Hunter</span>
+          </div>
+          <p class="game-desc">You are a bioluminescent predator in the deep ocean — tap to emit a hunting pulse that reveals prey silhouettes, then dash to catch them.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/pulse-hunter/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/pulse-hunter" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
 
   <!-- ROUND 4 -->
   <div class="round">
