Round 6: Pulse Hunter wins

--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Pulse Hunter</span>
+            <span class="winner-badge">Winner</span>
           </div>
           <p class="game-desc">You are a bioluminescent predator in the deep ocean — tap to emit a hunting pulse that reveals prey silhouettes, then dash to catch them.</p>
           <div class="game-links">
