Round 7 added: formation-break + drift-gate

--- a/index.html
+++ b/index.html
@@ -153,6 +153,46 @@
 
 <div class="rounds">
 
+  <!-- ROUND 7 -->
+  <div class="round">
+    <div class="round-label">Round 07 &mdash; Feb 24, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/formation-break/screenshot.png" alt="Formation Break" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Formation Break</span>
+          </div>
+          <p class="game-desc">Tap the instant enemy formations peak over your ring — a shockwave shatters everything it touches.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/formation-break/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/formation-break" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/drift-gate/screenshot.png" alt="Drift Gate" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Drift Gate</span>
+          </div>
+          <p class="game-desc">Hold to drift, release to fly — thread gate markers on a looping circuit before time runs out.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/drift-gate/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/drift-gate" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <!-- ROUND 6 -->
   <div class="round">
     <div class="round-label">Round 06 &mdash; Feb 24, 2026</div>
@@ -398,7 +438,6 @@
 
     </div>
   </div>
-
 
 
   <!-- NEW ROUNDS ABOVE THIS LINE -->
