Round 7: formation-break wins

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Formation Break</span>
+            <span class="winner-badge">Winner</span>
           </div>
           <p class="game-desc">Tap the instant enemy formations peak over your ring — a shockwave shatters everything it touches.</p>
           <div class="game-links">
