--- a/index.html
+++ b/index.html
@@ -153,6 +153,35 @@
 
 <div class="rounds">
 
+  <!-- ROUND 8 -->
+  <div class="round">
+    <div class="round-label">Round 08 &mdash; Feb 24, 2026</div>
+    <div class="games">
+      <div class="game">
+        <div class="game-thumb"><img src="https://nishivector.github.io/charge-shot/screenshot.png" alt="Charge Shot" /></div>
+        <div class="game-body">
+          <div class="game-title-row"><span class="game-title">Charge Shot</span></div>
+          <p class="game-desc">A space shooter where you charge a beam weapon by holding anywhere on screen. Match beam width to enemy formation density to destroy them all.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/charge-shot/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/charge-shot" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+      <div class="game">
+        <div class="game-thumb"><img src="https://nishivector.github.io/grind-chain/screenshot.png" alt="Grind Chain" /></div>
+        <div class="game-body">
+          <div class="game-title-row"><span class="game-title">Grind Chain</span></div>
+          <p class="game-desc">A side-scrolling skate grinding game where timing is everything. Chain grinds together for massive score multipliers, but one misstep and your chain breaks!</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/grind-chain/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/grind-chain" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- ROUND 7 -->
   <div class="round">
     <div class="round-label">Round 07 &mdash; Feb 24, 2026</div>
