Round 8: charge-shot wins

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <div class="game">
         <div class="game-thumb"><img src="https://nishivector.github.io/charge-shot/screenshot.png" alt="Charge Shot" /></div>
         <div class="game-body">
-          <div class="game-title-row"><span class="game-title">Charge Shot</span></div>
+          <div class="game-title-row"><span class="game-title">Charge Shot</span><span class="winner-badge">Winner</span></div>
           <p class="game-desc">A space shooter where you charge a beam weapon by holding anywhere on screen. Match beam width to enemy formation density to destroy them all.</p>
           <div class="game-links">
             <a class="link-play" href="https://nishivector.github.io/charge-shot/" target="_blank">Play</a>
