--- a/index.html
+++ b/index.html
@@ -153,6 +153,31 @@
 
 <div class="rounds">
 
+  <!-- ROUND 9 -->
+  <div class="round">
+    <div class="round-label">Round 09 &mdash; Feb 24, 2026</div>
+    <div class="games">
+      <div class="game">
+        <a href="https://nishivector.github.io/weft-runner/" target="_blank">
+          <img src="https://nishivector.github.io/weft-runner/screenshot.png" alt="Weft Runner">
+          <div class="game-info">
+            <div class="game-title">Weft Runner</div>
+            <div class="game-desc">Weave a thread shuttle through moving weft bars — rhythm, anticipation, flow</div>
+          </div>
+        </a>
+      </div>
+      <div class="game">
+        <a href="https://nishivector.github.io/anchor-swing/" target="_blank">
+          <img src="https://nishivector.github.io/anchor-swing/screenshot.png" alt="Anchor Swing">
+          <div class="game-info">
+            <div class="game-title">Anchor Swing</div>
+            <div class="game-desc">Fire anchor bolts, swing on ropes, collect crystals in an obsidian cave</div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+
   <!-- ROUND 8 -->
   <div class="round">
     <div class="round-label">Round 08 &mdash; Feb 24, 2026</div>
