Round 9: weft-runner wins

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <a href="https://nishivector.github.io/weft-runner/" target="_blank">
           <img src="https://nishivector.github.io/weft-runner/screenshot.png" alt="Weft Runner">
           <div class="game-info">
-            <div class="game-title">Weft Runner</div>
+            <div class="game-title">Weft Runner</div><span class="winner-badge">Winner</span>
             <div class="game-desc">Weave a thread shuttle through moving weft bars — rhythm, anticipation, flow</div>
           </div>
         </a>
