Fix Round 9 HTML structure to match rest of index

--- a/index.html
+++ b/index.html
@@ -157,24 +157,40 @@
   <div class="round">
     <div class="round-label">Round 09 &mdash; Feb 24, 2026</div>
     <div class="games">
+
       <div class="game">
-        <a href="https://nishivector.github.io/weft-runner/" target="_blank">
-          <img src="https://nishivector.github.io/weft-runner/screenshot.png" alt="Weft Runner">
-          <div class="game-info">
-            <div class="game-title">Weft Runner</div><span class="winner-badge">Winner</span>
-            <div class="game-desc">Weave a thread shuttle through moving weft bars — rhythm, anticipation, flow</div>
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/weft-runner/screenshot.png" alt="Weft Runner" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Weft Runner</span>
+            <span class="winner-badge">Winner</span>
           </div>
-        </a>
+          <p class="game-desc">Weave a thread shuttle through moving weft bars — rhythm, anticipation, flow.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/weft-runner/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/weft-runner" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
       </div>
+
       <div class="game">
-        <a href="https://nishivector.github.io/anchor-swing/" target="_blank">
-          <img src="https://nishivector.github.io/anchor-swing/screenshot.png" alt="Anchor Swing">
-          <div class="game-info">
-            <div class="game-title">Anchor Swing</div>
-            <div class="game-desc">Fire anchor bolts, swing on ropes, collect crystals in an obsidian cave</div>
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/anchor-swing/screenshot.png" alt="Anchor Swing" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Anchor Swing</span>
           </div>
-        </a>
+          <p class="game-desc">Fire anchor bolts into the cave ceiling, swing on ropes, and collect glowing crystals.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/anchor-swing/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/anchor-swing" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
       </div>
+
     </div>
   </div>
 
