--- a/index.html
+++ b/index.html
@@ -153,6 +153,46 @@
 
 <div class="rounds">
 
+  <!-- ROUND 10 -->
+  <div class="round">
+    <div class="round-label">Round 10 &mdash; Feb 24, 2026</div>
+    <div class="games">
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/mirror-strike/screenshot.png" alt="Mirror Strike" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Mirror Strike</span>
+          </div>
+          <p class="game-desc">Rotate a central paddle to deflect laser bolts off arena walls and shatter orbiting crystal targets.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/mirror-strike/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/mirror-strike" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game-thumb">
+          <img src="https://nishivector.github.io/root-siege/screenshot.png" alt="Root Siege" />
+        </div>
+        <div class="game-body">
+          <div class="game-title-row">
+            <span class="game-title">Root Siege</span>
+          </div>
+          <p class="game-desc">Extend roots from a central tree to absorb nutrient nodes before beetle swarms consume them and destroy your core.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/root-siege/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/root-siege" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <!-- ROUND 9 -->
   <div class="round">
     <div class="round-label">Round 09 &mdash; Feb 24, 2026</div>
