Round 10: mirror-strike wins

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         <div class="game-body">
           <div class="game-title-row">
             <span class="game-title">Mirror Strike</span>
+            <span class="winner-badge">Winner</span>
           </div>
           <p class="game-desc">Rotate a central paddle to deflect laser bolts off arena walls and shatter orbiting crystal targets.</p>
           <div class="game-links">
