--- a/index.html
+++ b/index.html
@@ -153,6 +153,35 @@
 
 <div class="rounds">
 
+  <!-- ROUND 11 -->
+  <div class="round">
+    <div class="round-label">Round 11 &mdash; Feb 24, 2026</div>
+    <div class="games">
+      <div class="game">
+        <div class="game-thumb"><img src="https://nishivector.github.io/shield-break/screenshot.png" alt="Shield Break" /></div>
+        <div class="game-body">
+          <div class="game-title-row"><span class="game-title">Shield Break</span></div>
+          <p class="game-desc">Hold to raise your shield, release at the perfect moment to parry enemy projectiles and reflect them back. Survive escalating feints and speeds across 5 waves.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/shield-break/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/shield-break" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+      <div class="game">
+        <div class="game-thumb"><img src="https://nishivector.github.io/fire-seed/screenshot.png" alt="Fire Seed" /></div>
+        <div class="game-body">
+          <div class="game-title-row"><span class="game-title">Fire Seed</span></div>
+          <p class="game-desc">Tap to ignite a fuel cell and watch fire spread across the grid. Navigate water barriers and damp cells to set everything ablaze across 5 puzzle levels.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/fire-seed/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/fire-seed" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- ROUND 10 -->
   <div class="round">
     <div class="round-label">Round 10 &mdash; Feb 24, 2026</div>
