Round 11: fire-seed winner badge, remove duplicate section

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <div class="game">
         <div class="game-thumb"><img src="https://nishivector.github.io/fire-seed/screenshot.png" alt="Fire Seed" /></div>
         <div class="game-body">
-          <div class="game-title-row"><span class="game-title">Fire Seed</span></div>
+          <div class="game-title-row"><span class="game-title">Fire Seed</span><span class="winner-badge">Winner</span></div>
           <p class="game-desc">Tap to ignite a fuel cell and watch fire spread across the grid. Navigate water barriers and damp cells to set everything ablaze across 5 puzzle levels.</p>
           <div class="game-links">
             <a class="link-play" href="https://nishivector.github.io/fire-seed/" target="_blank">Play</a>
@@ -179,46 +179,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-
-  <!-- ROUND 11 -->
-  <div class="round">
-    <div class="round-label">Round 11 &mdash; Feb 24, 2026</div>
-    <div class="games">
-
-      <div class="game">
-        <div class="game-thumb">
-          <img src="https://nishivector.github.io/shield-break/screenshot.png" alt="Shield Break" />
-        </div>
-        <div class="game-body">
-          <div class="game-title-row">
-            <span class="game-title">Shield Break</span>
-          </div>
-          <p class="game-desc">Hold to raise your shield, release at the perfect moment to parry enemy projectiles and reflect them back.</p>
-          <div class="game-links">
-            <a class="link-play" href="https://nishivector.github.io/shield-break/" target="_blank">Play</a>
-            <a class="link-repo" href="https://github.com/nishivector/shield-break" target="_blank">GitHub ↗</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="game">
-        <div class="game-thumb">
-          <img src="https://nishivector.github.io/fire-seed/screenshot.png" alt="Fire Seed" />
-        </div>
-        <div class="game-body">
-          <div class="game-title-row">
-            <span class="game-title">Fire Seed</span>
-          </div>
-          <p class="game-desc">Tap to ignite fuel cells and spread fire across the grid — navigate water barriers to set every cell ablaze.</p>
-          <div class="game-links">
-            <a class="link-play" href="https://nishivector.github.io/fire-seed/" target="_blank">Play</a>
-            <a class="link-repo" href="https://github.com/nishivector/fire-seed" target="_blank">GitHub ↗</a>
-          </div>
-        </div>
-      </div>
-
     </div>
   </div>
 
