Round 12: add games, resonant-break winner

--- a/index.html
+++ b/index.html
@@ -153,6 +153,35 @@
 
 <div class="rounds">
 
+  <!-- ROUND 12 -->
+  <div class="round">
+    <div class="round-label">Round 12 &mdash; Feb 25, 2026</div>
+    <div class="games">
+      <div class="game">
+        <div class="game-thumb"><img src="https://nishivector.github.io/phase-drift/screenshot.png" alt="Phase Drift" /></div>
+        <div class="game-body">
+          <div class="game-title-row"><span class="game-title">Phase Drift</span></div>
+          <p class="game-desc">Navigate an isometric maze while phase-shifting between two overlapping worlds — threats exist independently in each layer. Double-tap to switch.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/phase-drift/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/phase-drift" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+      <div class="game">
+        <div class="game-thumb"><img src="https://nishivector.github.io/resonant-break/screenshot.png" alt="Resonant Break" /></div>
+        <div class="game-body">
+          <div class="game-title-row"><span class="game-title">Resonant Break</span><span class="winner-badge">Winner</span></div>
+          <p class="game-desc">Hold and drag to tune your resonance weapon to match each enemy's frequency — release at peak amplitude to shatter them. Precision over reaction.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/resonant-break/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/resonant-break" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- ROUND 11 -->
   <div class="round">
     <div class="round-label">Round 11 &mdash; Feb 24, 2026</div>
