Add Round 13 games: ring-flip, scent-trail

--- a/index.html
+++ b/index.html
@@ -153,6 +153,35 @@
 
 <div class="rounds">
 
+  <!-- ROUND 13 -->
+  <div class="round">
+    <div class="round-label">Round 13 &mdash; Feb 26, 2026</div>
+    <div class="games">
+      <div class="game">
+        <div class="game-thumb"><img src="https://nishivector.github.io/ring-flip/screenshot.png" alt="Ring Flip" /></div>
+        <div class="game-body">
+          <div class="game-title-row"><span class="game-title">Ring Flip</span></div>
+          <p class="game-desc">Enemies orbit you in concentric rings. One button flips every enemy's direction simultaneously — time it perfectly to chain collisions across all rings at once.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/ring-flip/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/ring-flip" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+      <div class="game">
+        <div class="game-thumb"><img src="https://nishivector.github.io/scent-trail/screenshot.png" alt="Scent Trail" /></div>
+        <div class="game-body">
+          <div class="game-title-row"><span class="game-title">Scent Trail</span></div>
+          <p class="game-desc">Drop bait to redirect a massive beast's attention away from you. With finite bait and a fixed eat timer, every drop is a calculated gamble.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/scent-trail/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/scent-trail" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- ROUND 12 -->
   <div class="round">
     <div class="round-label">Round 12 &mdash; Feb 25, 2026</div>
