--- a/index.html
+++ b/index.html
@@ -153,6 +153,35 @@
 
 <div class="rounds">
 
+  <!-- ROUND 14 -->
+  <div class="round">
+    <div class="round-label">Round 14 &mdash; Feb 27, 2026</div>
+    <div class="games">
+      <div class="game">
+        <div class="game-thumb"><img src="https://nishivector.github.io/lava-step/screenshot.png" alt="Lava Step" /></div>
+        <div class="game-body">
+          <div class="game-title-row"><span class="game-title">Lava Step</span></div>
+          <p class="game-desc">Freeze flowing lava into crystal platforms with a tap — then race across before they melt. Read the shadow angles to anticipate where channels bend, and place your steps three beats ahead.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/lava-step/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/lava-step" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+      <div class="game">
+        <div class="game-thumb"><img src="https://nishivector.github.io/flock-shepherd/screenshot.png" alt="Flock Shepherd" /></div>
+        <div class="game-body">
+          <div class="game-title-row"><span class="game-title">Flock Shepherd</span></div>
+          <p class="game-desc">Guide a luminous flock through predator clouds using only proximity — move near them to repel, hold perfectly still to attract. Stillness compresses the flock into a comet that punches through barriers.</p>
+          <div class="game-links">
+            <a class="link-play" href="https://nishivector.github.io/flock-shepherd/" target="_blank">Play</a>
+            <a class="link-repo" href="https://github.com/nishivector/flock-shepherd" target="_blank">GitHub ↗</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- ROUND 13 -->
   <div class="round">
     <div class="round-label">Round 13 &mdash; Feb 26, 2026</div>
