R14: flock-shepherd wins

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <div class="game">
         <div class="game-thumb"><img src="https://nishivector.github.io/flock-shepherd/screenshot.png" alt="Flock Shepherd" /></div>
         <div class="game-body">
-          <div class="game-title-row"><span class="game-title">Flock Shepherd</span></div>
+          <div class="game-title-row"><span class="game-title">Flock Shepherd</span><span class="winner-badge">Winner</span></div>
           <p class="game-desc">Guide a luminous flock through predator clouds using only proximity — move near them to repel, hold perfectly still to attract. Stillness compresses the flock into a comet that punches through barriers.</p>
           <div class="game-links">
             <a class="link-play" href="https://nishivector.github.io/flock-shepherd/" target="_blank">Play</a>
